--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "authors": [
         {
             "name": "Daniël Klabbers",
-            "email": "daniel+flarum@klabbers.email",
-            "homepage": "http://github.com/luceos"
+            "email": "daniel@klabbers.email",
+            "homepage": "http://luceos.com"
         }
     ],
     "require": {
