Apply new README format

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
                 "backgroundColor": "#f4f4f4",
                 "color": "#5f4bb6"
             }
+        },
+        "flagrow": {
+            "discuss": "https://discuss.flarum.org/d/5791-flagrow-masquerade-user-profile-builder"
         }
     },
     "autoload": {
