updated the logo, better version on white

--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,9 @@
             "title": "Flagrow Masquerade",
             "icon": {
                 "image": "resources/logo.svg",
-                "backgroundColor": "#fff",
-                "backgroundSize": "cover",
+                "backgroundColor": "#5f4bb6",
+                "backgroundSize": "90%",
+		"backgroundRepeat": "no-repeat",
                 "backgroundPosition": "center"
             }
         },
