Fix license capitalization for Packagist

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "profile"
     ],
     "type": "flarum-extension",
-    "license": "mit",
+    "license": "MIT",
     "authors": [
         {
             "name": "Daniël Klabbers",
