--- a/js/package.json
+++ b/js/package.json
@@ -1,18 +1,19 @@
 {
-    "private": true,
     "name": "@fof/masquerade",
+    "private": true,
     "dependencies": {
-        "flarum-webpack-config": "0.1.0-beta.10",
+        "flarum-webpack-config": "^0.1.0-beta.10",
         "html5sortable": "^0.9.17",
-        "webpack": "^4.0.0",
-        "webpack-cli": "^3.0.7"
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12"
     },
     "scripts": {
         "dev": "webpack --mode development --watch",
         "build": "webpack --mode production",
-        "format": "prettier --single-quote --trailing-comma es5 --print-width 150 --tab-width 4 --write src"
+        "lint": "prettier --single-quote --trailing-comma es5 --print-width 150 --tab-width 4 --write src"
     },
     "devDependencies": {
-        "prettier": "^2.1.2"
+        "flarum": "0.1.0-beta.16",
+        "prettier": "^2.2.1"
     }
 }
