--- a/js/package.json
+++ b/js/package.json
@@ -2,7 +2,7 @@
     "name": "@fof/masquerade",
     "private": true,
     "dependencies": {
-        "flarum-webpack-config": "^0.1.0-beta.10",
+        "flarum-webpack-config": "^1.0",
         "html5sortable": "^0.9.17",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12"
