--- a/js/package.json
+++ b/js/package.json
@@ -1,19 +1,21 @@
 {
     "name": "@fof/masquerade",
     "private": true,
+    "prettier": "@flarum/prettier-config",
     "dependencies": {
-        "flarum-webpack-config": "^1.0",
-        "html5sortable": "^0.9.17",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12"
+        "flarum-webpack-config": "^1.0.0",
+        "html5sortable": "^0.9.18",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^4.9.1"
     },
     "scripts": {
         "dev": "webpack --mode development --watch",
         "build": "webpack --mode production",
-        "lint": "prettier --single-quote --trailing-comma es5 --print-width 150 --tab-width 4 --write src"
+        "format": "prettier --write src"
     },
     "devDependencies": {
-        "flarum": "0.1.0-beta.16",
-        "prettier": "^2.2.1"
+        "@flarum/prettier-config": "^1.0.0",
+        "flarum-tsconfig": "^1.0.2",
+        "prettier": "^2.5.1"
     }
 }
