--- a/composer.json
+++ b/composer.json
@@ -47,11 +47,26 @@
         },
         "flagrow": {
             "discuss": "https://discuss.flarum.org/d/5791"
+        },
+        "flarum-cli": {
+            "modules": {
+                "githubActions": true
+            }
         }
     },
     "autoload": {
         "psr-4": {
             "FoF\\Masquerade\\": "src/"
         }
+    },
+    "require-dev": {
+        "flarum/phpstan": "*"
+    },
+    "scripts": {
+        "analyse:phpstan": "phpstan analyse",
+        "clear-cache:phpstan": "phpstan clear-result-cache"
+    },
+    "scripts-descriptions": {
+        "analyse:phpstan": "Run static analysis"
     }
 }
