--- a/js/package.json
+++ b/js/package.json
@@ -11,7 +11,8 @@
     "scripts": {
         "dev": "webpack --mode development --watch",
         "build": "webpack --mode production",
-        "format": "prettier --write src"
+        "format": "prettier --write src",
+        "format-check": "prettier --check src"
     },
     "devDependencies": {
         "@flarum/prettier-config": "^1.0.0",
