--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,5 +8,6 @@ jobs:
     with:
       enable_backend_testing: false
       enable_phpstan: true
+      php_versions: '["8.1", "8.2", "8.3"]'
 
       backend_directory: .
