--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "forum": "https://discuss.flarum.org/d/5791"
     },
     "require": {
+        "php": "^8.1",
         "flarum/core": "^1.2"
     },
     "replace": {
