--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "forum": "https://discuss.flarum.org/d/5791"
     },
     "require": {
-        "flarum/core": "^1.2"
+        "php": "^8.1",
+        "flarum/core": "^1.8.5"
     },
     "replace": {
         "flagrow/masquerade": "*"
