chore: prepare `build-typings`

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "flarum-tsconfig",
   "include": ["src/**/*", "../vendor/*/*/js/dist-typings/@types/**/*", "@types/**/*"],
   "compilerOptions": {
+    "declarationDir": "./dist-typings",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "baseUrl": ".",
